theme/ElectionData-V2/style.css
/* ... */
.mobile_home {
  margin: 0 0 30px 11px;
}

.visible_block_when_mobile {
	display: none; }

.grey {
	color: #777777; }

.grey a {
    color: #8F9CC3; }

.small {
	font-size: 0.8em; }

.tiny {
	font-size: 0.5em; }


.parties_thumb {
	overflow: auto;
	zoom: 1;
    margin-bottom: -15px;}

  .party_thumb {
	float: left;
	margin-right: 33px;
	margin-bottom: 25px; }
    .party_thumb p {
        margin-bottom: 5px;
    }
	.party_thumb div img {
		height: 95px;
        width: auto; }

.map_nav {
  border: 3px solid #999;
  border-radius: 10px;
  padding: 18px;
  margin-top: 50px;
}


#main {
	position: relative; }

@media all and (max-width: 959px) {
	header {
		padding-top: 1em;
		height: 100px; }
	header h1 {
		font-size: 36px;}
	header h2 {
		font-size: 14px; }

	#container {
		width: 640px; }

	.three_columns {
		width: 598px; }

	.two_columns_early_shrink {
		width: 278px; }

	header .menu > ul > li:last-child > a{
		padding:0 23px 0 15px;}

  .map_nav {
    border: none;
    margin-top: 10px;
  }

	}

@media all and (max-width: 639px) {
	header {
        background-image: none;
		padding-top: 0.5em;
		height: auto; }
	header h1 {
		font-size: 2.7em; }

    /* Party thumbnails on separate lines when in mobile mode. */
    .party_thumb {
        float: none; }
	.party_thumb div img {
		height: 150px; }

	#container {
		width: 320px; }
  
  .short {
    height: auto;
  }

  .one_column, .two_columns, .three_columns, .two_columns_early_shrink {
    padding-left: 10px;
  }

	.three_columns, .two_columns {
		width: 278px; }

	.two_column_flow {
		width: 320px; }

	.visible_block_when_mobile {
		display: block; }
	.hidden_block_when_mobile {
		display: none;  }

	.head-top .header-time{
		width:100%;
		padding: 20px 0;
    	text-align: center;}

	header #menu-trigger{
		bottom: 7px;
		}

	#searchform .letterinput{
		width:calc(100% - 50px);}

	header .menu-tog{
		display:block;}
	.head-top .search-form{
	    position: static;
		width:100%;
		margin-top: 25px; }
	.search-form #searchform{
		float:left;
		width: calc(100% - 50px);}

	#menu-toggle:checked ~ .mobile-menu {
		left: 0;
		right:inherit;}
	#menu-toggle:checked ~ #menu-trigger {
		left: 275px;
		right:inherit;}

	.home #container #main .page-list ul li, .home #container #main .page-image-icon ul li, .home #container #main .latest-news ul li{
		width:100%;
		margin-bottom: 70px;}

	.home #container #main .page-list ul li:nth-child(3n+2),.home #container #main .latest-news ul li:nth-child(3n+2){
		margin: 0 0 70px 0;}

  .home #container #main .page-list ul li .page-article p.pimg {
    padding-top: 5px;
  }


  .home #container #main .page-list ul li .page-article p.excerpt {
    height: auto;
    margin-bottom: 1em;
    padding-top: 0;
  }

	body.home #container #main .page-list ul li a {
    	font-size: 24px;}
	.home #main .page-list ul li p{
		font-size: 16px;}

	#container .latest-news{
		margin-top:15px;}



/* Footer in the mobile just 2 column in one row*/
	#footer_left {
		width: 45%;
		padding-left: 1%;
		padding-right: 2%;
	}

	#footer_center {
		width: 45%;
		padding-left: 1%;
	}

	#footer_right {
		margin-left: 15%;
	}


	#footer_right h3{
		margin-top: 90px;
	}

	footer .site-info{
		text-align: center;
	}
}

.latest_news_small h4, .latest_news_large h4 {
  color: #666666; }
.latest_news_small span.source, .latest_news_large span.source {
  color: #444444;
  font-size: 0.8em; }
.latest_news_small ul, .latest_news_large ul {
  list-style: none;
  margin-left: 0; }
  .latest_news_small ul li, .latest_news_large ul li {
    border-bottom: 1px solid #dddddd; }
.latest_news_small p.link, .latest_news_large p.link {
  margin-bottom: 0; }

.latest_news_small ul, .latest_news_small p.more {
  font-size: 12px; }
.latest_news_small ul li {
  margin-bottom: 5px; }
.latest_news_small p.date {
  color: #666666;
  margin-bottom: 5px;
  font-size: 11px; }
.latest_news_small p.mentions {
  color: #888888;
  font-size: 10px; }

.latest_news_large ul {
  font-size: 13px; }
  .latest_news_large ul li {
    margin-bottom: 10px; }
.latest_news_large p.mentions {
  color: #888888;
  font-size: 11px; }
p.mentions {
  margin-top: 3px;
}
p.mentions a {
  color: #8F9CC3;
}


/* ================================================================
This copyright notice must be untouched at all times.

The original version of this stylesheet and the associated (x)html
is available at http://www.cssplay.co.uk/menus/droplist-flyout.html
Copyright (c) 2005-2010 Stu Nicholls. All rights reserved.
This stylesheet and the associated (x)html may be modified in any
way to fit your requirements.
=================================================================== */

/* this is a CSS answer to fix the hover/focus '~' and hover/focus '+' problem in safari and chrome */
html {-webkit-animation: safariSelectorFix infinite 1s;}
@-webkit-keyframes safariSelectorFix {
0% {zoom:1;}
100% {zoom:1;}
}

.menu {
	height:25px;
	background:#eee;
	margin:0 9px 15px 9px;
	padding-left:20px;
}

.menu ul {margin:0; padding:0; list-style:none; white-space:nowrap; position:relative;}
.menu > ul {float:left;}

.menu ul ul {position:absolute; left:-9999px;}
.menu > ul > li {float:left; display:block; position:relative;}

.menu ul ul {background:rgba(238, 238, 238, 0.21); padding:10px 0; border:1px solid #ddd;
border-top: none;
-moz-border-radius: 5px;
-webkit-border-radius: 5px;
-ms-border-radius: 5px;
border-radius: 5px;
}

.menu > ul > li > ul {border-top:0;
z-index: 2;
-moz-border-radius: 0 0 5px 5px;
-webkit-border-radius: 0 0 5px 5px;
-ms-border-radius: 0 0 5px 5px;
border-radius: 0 0 5px 5px;
-o-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
-icab-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
-khtml-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
-moz-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
-webkit-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
}
/* ... */

